--- a/index.html
+++ b/index.html
@@ -22,44 +22,58 @@
         </section>
         <section class="container" id="projects">
             <p id="my_projects">These are some of my projects</p>
-        <div class="project-tile">
-            <div class="grid-item">
-                <h1>Steve Jobs</h1>
-                <p>Apple inventor</p>
-                <a href="https://en.wikipedia.org/wiki/Steve_Jobs">Tribute page</a>
+            <div class="project-tile">
+                <div class="grid-item">
+                    <a href="https://oloriiretech.github.io/FCC_Tribute-page/" target="_blank">
+                        <img src="/Portfolio/img/tribute-img.png" alt="tribute site image">
+                        <h3>Steve Jobs - Apple Inventor</h3>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href=" https://oloriiretech.github.io/FCC_Survey-Form/" target="_blank">
+                        <img src="/Portfolio/img/surveyform-img.png"
+                            alt="survey-form site image">
+                        <h3>Survey Form</h3>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="https://oloriiretech.github.io/FCC_Technical-Documentation-Page/" target="_blank">
+                        <img src="/Portfolio/img/techdoc-img.png" alt="technical-documentation site img">
+                        <h3>Documentation Page</h3>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href=" https://oloriiretech.github.io/FCC_Product-Landing-Page/" target="_blank">
+                        <img src="/Portfolio/img/productlanding-img.png" alt="product landing site image">
+                        <h3>Product Landing Page</h3>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="https://www.wikiwand.com/" target="_blank">
+                        <h3>Wikipedia Viewer</h3>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="https://toytheater.com/tic-tac-toe/" target="_blank">
+                        <h3>Tic Tac Toe Game</h3>
+                    </a>
+                </div>
             </div>
-            <div class="grid-item">
-                <a href="https://youtu.be/Xjwel6fZUdA">Random Quote Machine</a>
+            <div id="show-all">
+                <a href="#">Show all <i class="fa-solid fa-greater-than"></i></a>
             </div>
-            <div class="grid-item">
-                <a href="https://www.geeksforgeeks.org/javascript-calculator/">JavaScript Calculator</a>
-            </div>
-            <div class="grid-item">
-                <img src="https://th.bing.com/th/id/OIP.fJBH-01-GmuUkRKLEouQdAHaDv?rs=1&pid=ImgDetMain" width="20px" height="20px">
-                <a href="https://youtu.be/ms67WbjRAuM">Map Data Across the Globe</a>
-            </div>
-            <div class="grid-item">
-                <a href="https://www.wikiwand.com/">Wikipedia Viewer</a>
-            </div>
-            <div class="grid-item">
-                <a href="https://toytheater.com/tic-tac-toe/">Tic Tac Toe Game</a>
-            </div>
-        </div>
-        <div id="show-all">
-            <a href="#">Show all</a>
-        </div>
-          </section>
+        </section>
         <section class="work" id="work_link">
             <p id="togetherness">Let's work together...</p>
             <p id="coffee">How do you take coffee?</p>
             <div class="web-link">
-            <a href="#"><img
-                    src="https://image.similarpng.com/very-thumbnail/2020/05/Facebook-logo-in-square-shape-PNG.png"
-                    height="20px" width="10px"> Facebook</a>
-            <a href="#"><i class="fa-brands fa-square-github"></i> GitHub</a>
-            <a href="#"><i class="fa-brands fa-square-twitter"></i> Twitter</a>
-            <a href="#"><strong>@</strong></i> Send a mail</a>
-            <a href="#"><i class="fa-solid fa-mobile-screen-button"></i> Call me</a>
+                <a href="#"><img
+                        src="https://image.similarpng.com/very-thumbnail/2020/05/Facebook-logo-in-square-shape-PNG.png"
+                        height="20px" width="10px"> Facebook</a>
+                <a href="#"><i class="fa-brands fa-square-github"></i> GitHub</a>
+                <a href="#"><i class="fa-brands fa-square-twitter"></i> Twitter</a>
+                <a href="#"><strong>@</strong></i> Send a mail</a>
+                <a href="#"><i class="fa-solid fa-mobile-screen-button"></i> Call me</a>
             </div>
         </section>
         <hr>
