--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="https://www.wikiwand.com/" target="_blank">
-                        <h3>Wikipedia Viewer</h3>
+                    <a href="https://oloriiretech.github.io/Event-Calendar-Scheduler/" target="_blank">
+                        <h3>Event Scheduler</h3>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="https://toytheater.com/tic-tac-toe/" target="_blank">
-                        <h3>Tic Tac Toe Game</h3>
+                    <a href="https://oloriiretech.github.io/Personal-Budget-Manager/" target="_blank">
+                        <h3>Personal Budget Manager</h3>
                     </a>
                 </div>
             </div>
