--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="https://oloriiretech.github.io/Event-Calendar-Scheduler/" target="_blank">
+                    <a href="" target="_blank">
                         <h3>Event Scheduler</h3>
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="https://oloriiretech.github.io/Personal-Budget-Manager/" target="_blank">
+                    <a href=" https://oloriiretech.github.io/Personal-Budget-Manager/" target="_blank">
                         <h3>Personal Budget Manager</h3>
                     </a>
                 </div>
