--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href="" target="_blank">
+                    <a href="https://oloriiretech.github.io/Event-Calendar-Scheduler/" target="_blank">
                         <h3>Event Scheduler</h3>
                     </a>
                 </div>
