--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Portfolio</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width" , initial-scale="1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/db05450523.js" crossorigin="anonymous"></script>
 </head>
@@ -15,11 +15,13 @@
         <a href="#projects" class="nav-link">Work</a>
         <a href="#work_link" class="nav-link">Contact</a>
     </nav>
+
     <main>
         <section id="welcome-section">
             <h1 id="mimic">Hey I am Mary-Jen</h1>
             <header id="developer">a web developer</header>
         </section>
+
         <section class="container" id="projects">
             <p id="my_projects">These are some of my projects</p>
             <div class="project-tile">
@@ -30,9 +32,8 @@
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href=" https://oloriiretech.github.io/FCC_Survey-Form/" target="_blank">
-                        <img src="/Portfolio/img/surveyform-img.png"
-                            alt="survey-form site image">
+                    <a href="https://oloriiretech.github.io/FCC_Survey-Form/" target="_blank">
+                        <img src="/Portfolio/img/surveyform-img.png" alt="survey-form site image">
                         <h3>Survey Form</h3>
                     </a>
                 </div>
@@ -43,7 +44,7 @@
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href=" https://oloriiretech.github.io/FCC_Product-Landing-Page/" target="_blank">
+                    <a href="https://oloriiretech.github.io/FCC_Product-Landing-Page/" target="_blank">
                         <img src="/Portfolio/img/productlanding-img.png" alt="product landing site image">
                         <h3>Product Landing Page</h3>
                     </a>
@@ -54,7 +55,7 @@
                     </a>
                 </div>
                 <div class="grid-item">
-                    <a href=" https://oloriiretech.github.io/Personal-Budget-Manager/" target="_blank">
+                    <a href="https://oloriiretech.github.io/Personal-Budget-Manager/" target="_blank">
                         <h3>Personal Budget Manager</h3>
                     </a>
                 </div>
@@ -63,6 +64,7 @@
                 <a href="#">Show all <i class="fa-solid fa-greater-than"></i></a>
             </div>
         </section>
+
         <section class="work" id="work_link">
             <p id="togetherness">Let's work together...</p>
             <p id="coffee">How do you take coffee?</p>
@@ -70,16 +72,26 @@
                 <a href="#"><img
                         src="https://image.similarpng.com/very-thumbnail/2020/05/Facebook-logo-in-square-shape-PNG.png"
                         height="20px" width="10px"> Facebook</a>
-                <a href="#"><i class="fa-brands fa-square-github"></i> GitHub</a>
-                <a href="#"><i class="fa-brands fa-square-twitter"></i> Twitter</a>
-                <a href="#"><strong>@</strong></i> Send a mail</a>
-                <a href="#"><i class="fa-solid fa-mobile-screen-button"></i> Call me</a>
+                <a href="https://github.com/oloriiretech" target="_blank">
+                    <i class="fa-brands fa-square-github"></i> GitHub
+                </a>
+                <a href="https://www.linkedin.com/in/ireoluwa-oloriire-rhim-477a33302" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i> LinkedIn
+                </a>
+                <a href="mailto:oloriireolayanjumary@gmail.com">
+                    <strong>@</strong> Send a mail
+                </a>
+                <a href="tel:+2348107633737">
+                    <i class="fa-solid fa-mobile-screen-button"></i> Call me
+                </a>
             </div>
         </section>
+
         <hr>
         <footer>
             **This is just original portfolio. All the projects and contact details are real.
-            <i class="fa-regular fa-copyright"></i>Created for <a href="#">freeCodeCamp</a>
+            <i class="fa-regular fa-copyright"></i>
+            Created for <a href="#">freeCodeCamp</a>
         </footer>
     </main>
 </body>
